change anchor color to a blue

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 
         a {
             color: #007bff;
-            color: #ccc;
+            color: #70A3CC;
             text-decoration: none;
             background-color: transparent;
             word-break: break-all;
